explain things clearer

--- a/found/README
+++ b/found/README
@@ -1,3 +1,5 @@
 # This folder contains scripts that I found online. They are
-# distributed under whatever licences they say specify. I do not claim
-# authorship or ownership to the original scripts.
+# distributed under whatever licenses they specify. I do not claim
+# authorship or ownership of the original scripts. Also, I am
+# licensing any changes I make under the original scripts' respective
+# licenses.
